--- a/app/templates/components/node-view.hbs
+++ b/app/templates/components/node-view.hbs
@@ -1,4 +1,4 @@
-{{visjs-node nId=node.id bubbles=false label=node.name options=options cid=node.cid posX=node.posX posY=node.posY color=node.color select=(action 'selectNode' node.id)  selectDouble=(action 'queryForConnectingNodes') hover=(action 'focusNode') blur=(action 'blur')}}
+{{visjs-node nId=node.id bubbles=false label=node.name options=options cid=node.cid posX=node.posX posY=node.posY color=color select=(action 'selectNode' node.id)  selectDouble=(action 'queryForConnectingNodes') hover=(action 'focusNode') blur=(action 'blur')}}
   
   {{!-- Displays node name on hover via wormhole --}}
   {{#if isHovering}}
