--- a/app/templates/visualization/edit-window.hbs
+++ b/app/templates/visualization/edit-window.hbs
@@ -7,7 +7,6 @@
 </div>
 <hr>
 
-
 <div class='row'>
   <div class='col'>
     {{#if isEditing}}
@@ -39,7 +38,7 @@
         <label for="name" class='badge badge-pill' style='background:{{model.color}}'>
           {{bs-tooltip title=label}}
           {{label}}
-          {{#bs-button class='badge badge-pill badge-outline delete-label' onClick=(action 'deleteLabel' label)}}
+          {{#bs-button class='badge badge-pill badge-outline remove-label-button' onClick=(action 'deleteLabel' label)}}
             {{fa-icon 'times'}}
           {{/bs-button}}
         </label>
@@ -74,7 +73,7 @@
       {{!Editable property key}}
       <div class='form-group row' style='padding-bottom:5px;'>
 
-        <label for='key' class='col-5'>
+        <label for='key' class='col-4'>
           {{input type='textarea' class='form-control' value=key focus-out=(action 'blurKey' key value)}}
         </label>
 
@@ -158,6 +157,38 @@
           {{value}}  
       </div>
     </form>
+  {{else}}
+    <svg width="16" height="16" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg">
+      <defs>
+          <linearGradient x1="8.042%" y1="0%" x2="65.682%" y2="23.865%" id="a">
+              <stop stop-color="black" stop-opacity="0" offset="0%"/>
+              <stop stop-color="grey" stop-opacity=".631" offset="63.146%"/>
+              <stop stop-color="blue" offset="100%"/>
+          </linearGradient>
+      </defs>
+      <g fill="none" fill-rule="evenodd">
+          <g transform="translate(1 1)">
+              <path d="M36 18c0-9.94-8.06-18-18-18" id="Oval-2" stroke="url(#a)" stroke-width="2">
+                  <animateTransform
+                      attributeName="transform"
+                      type="rotate"
+                      from="0 18 18"
+                      to="360 18 18"
+                      dur="0.9s"
+                      repeatCount="indefinite" />
+              </path>
+              <circle fill="#fff" cx="36" cy="18" r="1">
+                  <animateTransform
+                      attributeName="transform"
+                      type="rotate"
+                      from="0 18 18"
+                      to="360 18 18"
+                      dur="0.9s"
+                      repeatCount="indefinite" />
+              </circle>
+          </g>
+      </g>
+    </svg>
   {{/each-in}}
 
 {{/if}}
@@ -186,6 +217,38 @@
       <li>
         {{value}} {{key}}
       </li>
+    {{else}}
+      <svg width="16" height="16" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+            <linearGradient x1="8.042%" y1="0%" x2="65.682%" y2="23.865%" id="a">
+                <stop stop-color="black" stop-opacity="0" offset="0%"/>
+                <stop stop-color="grey" stop-opacity=".631" offset="63.146%"/>
+                <stop stop-color="blue" offset="100%"/>
+            </linearGradient>
+        </defs>
+        <g fill="none" fill-rule="evenodd">
+            <g transform="translate(1 1)">
+                <path d="M36 18c0-9.94-8.06-18-18-18" id="Oval-2" stroke="url(#a)" stroke-width="2">
+                    <animateTransform
+                        attributeName="transform"
+                        type="rotate"
+                        from="0 18 18"
+                        to="360 18 18"
+                        dur="0.9s"
+                        repeatCount="indefinite" />
+                </path>
+                <circle fill="#fff" cx="36" cy="18" r="1">
+                    <animateTransform
+                        attributeName="transform"
+                        type="rotate"
+                        from="0 18 18"
+                        to="360 18 18"
+                        dur="0.9s"
+                        repeatCount="indefinite" />
+                </circle>
+            </g>
+        </g>
+      </svg>
     {{/each-in}}
   </ul>
 
