--- a/app/templates/welcome.hbs
+++ b/app/templates/welcome.hbs
@@ -14,4 +14,12 @@
     </div>
   </div>
 
+  <div class="card-body d-flex justify-content-center">
+      Click Login to create your own graph and get started!
+  </div>
+  <div class="card-footer d-flex justify-content-center">
+    {{#bs-button class="btn-outline-success btn-xs" onClick=(action 'login')}}
+      Login
+    {{/bs-button}}
+  </div>
 </div>
