--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 
 
 @import "ember-bootstrap/bootstrap";
+@import "ember-basic-dropdown";
 
 // app/styles/app.scss
 
@@ -51,6 +52,25 @@ body {
   user-select: none;
 }
 
+.account-dropdown {
+  position: fixed;
+  top: 5px;
+  right: 5px;
+}
+
+.card-info {
+  min-width: 12rem;
+  max-width: 36rem;
+}
+
+.welcome-page {
+  padding: 0;
+}
+
+.account-dropdown-list {
+  list-style: none;
+}
+
 .footer {
   user-select: none;
   height: 5vh;
@@ -70,6 +90,35 @@ body {
     padding-right: 40px;
     padding-left: 40px;
   }
+}
+
+
+.trigger-bootstrap-feel {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  padding: 6px 12px;
+  line-height: 1.42857143;
+  border-radius: 4px;
+  color: #333;
+  background-color: #fff;
+  outline: none;
+}
+
+.trigger-bootstrap-feel:focus, .trigger-bootstrap-feel:hover {
+  background-color: #d4d4d4;
+  border-color: #8c8c8c
+}
+
+.content-bootstrap-feel {
+  background-color: #fff;
+  border: 1px solid rgba(0,0,0,.15);
+  border-radius: 4px;
+  box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  padding: 5px;
+  margin: 2px 0 0;
 }
 
 $ember-power-select-border-color: #64A5ED;
