Moved account-dropdown to visualizatio n route

--- a/app/templates/visualization.hbs
+++ b/app/templates/visualization.hbs
@@ -4,6 +4,9 @@
       {{vis-parent model=graphCache.items}}
     </div>
     <div class='col-4'>
+      <div class='account-dropdown'>
+        {{account/account-dropdown}}
+      </div>
       {{outlet model=graphCache.items}}
     </div>
   </div>
