--- a/app/templates/visualization/edit-window.hbs
+++ b/app/templates/visualization/edit-window.hbs
@@ -87,13 +87,9 @@
 
         {{else}}
 
-
-
           <div class='col'>
             {{#bs-button type="button" class='group-list-item btn-outline-danger btn-xs' onClick=(action 'deleteProperty')}}{{fa-icon 'trash'}}{{bs-tooltip title='Delete Property'}}{{/bs-button}}
           </div>
-
-          
 
         {{/if}}
       </div>
@@ -153,37 +149,7 @@
       </div>
     </form>
   {{else}}
-    <svg width="16" height="16" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg">
-      <defs>
-          <linearGradient x1="8.042%" y1="0%" x2="65.682%" y2="23.865%" id="a">
-              <stop stop-color="black" stop-opacity="0" offset="0%"/>
-              <stop stop-color="grey" stop-opacity=".631" offset="63.146%"/>
-              <stop stop-color="blue" offset="100%"/>
-          </linearGradient>
-      </defs>
-      <g fill="none" fill-rule="evenodd">
-          <g transform="translate(1 1)">
-              <path d="M36 18c0-9.94-8.06-18-18-18" id="Oval-2" stroke="url(#a)" stroke-width="2">
-                  <animateTransform
-                      attributeName="transform"
-                      type="rotate"
-                      from="0 18 18"
-                      to="360 18 18"
-                      dur="0.9s"
-                      repeatCount="indefinite" />
-              </path>
-              <circle fill="#fff" cx="36" cy="18" r="1">
-                  <animateTransform
-                      attributeName="transform"
-                      type="rotate"
-                      from="0 18 18"
-                      to="360 18 18"
-                      dur="0.9s"
-                      repeatCount="indefinite" />
-              </circle>
-          </g>
-      </g>
-    </svg>
+    Loading properties...
   {{/each-in}}
 
 {{/if}}
@@ -213,37 +179,7 @@
         {{value}} {{key}}
       </li>
     {{else}}
-      <svg width="16" height="16" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg">
-        <defs>
-            <linearGradient x1="8.042%" y1="0%" x2="65.682%" y2="23.865%" id="a">
-                <stop stop-color="black" stop-opacity="0" offset="0%"/>
-                <stop stop-color="grey" stop-opacity=".631" offset="63.146%"/>
-                <stop stop-color="blue" offset="100%"/>
-            </linearGradient>
-        </defs>
-        <g fill="none" fill-rule="evenodd">
-            <g transform="translate(1 1)">
-                <path d="M36 18c0-9.94-8.06-18-18-18" id="Oval-2" stroke="url(#a)" stroke-width="2">
-                    <animateTransform
-                        attributeName="transform"
-                        type="rotate"
-                        from="0 18 18"
-                        to="360 18 18"
-                        dur="0.9s"
-                        repeatCount="indefinite" />
-                </path>
-                <circle fill="#fff" cx="36" cy="18" r="1">
-                    <animateTransform
-                        attributeName="transform"
-                        type="rotate"
-                        from="0 18 18"
-                        to="360 18 18"
-                        dur="0.9s"
-                        repeatCount="indefinite" />
-                </circle>
-            </g>
-        </g>
-      </svg>
+      Loading connections...
     {{/each-in}}
   </ul>
 
