better application template and controller

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -52,6 +52,11 @@ body {
   user-select: none;
 }
 
+.graphing-tool-badge {
+  opacity: 0.75;
+  font-size :50%;
+}
+
 .account-dropdown {
   position: fixed;
   top: 5px;
