--- a/app/templates/visualization.hbs
+++ b/app/templates/visualization.hbs
@@ -1,10 +1,10 @@
-<div class='container-fluid'>
-  <div class='row'>
-    <div class='col-8'>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-8">
       {{vis-parent model=graphCache.items}}
     </div>
-    <div class='col-4'>
-      <div class='account-dropdown'>
+    <div class="col-4">
+      <div class="account-dropdown">
         {{account/account-dropdown}}
       </div>
       {{outlet model=graphCache.items}}
