--- a/app/templates/components/node-view.hbs
+++ b/app/templates/components/node-view.hbs
@@ -1,15 +1,15 @@
 {{visjs-node nId=node.id bubbles=false label=node.name options=options cid=node.cid posX=node.posX posY=node.posY color=color select=(action 'selectNode' node.id)  selectDouble=(action 'queryForConnectingNodes') hover=(action 'focusNode') blur=(action 'blur')}}
-  
-  {{!-- Displays node name on hover via wormhole --}}
-  {{#if isHovering}}
-    {{#ember-wormhole to='destination'}}
-      <strong>
-        {{node.name}}
-      </strong>
-      {{#each node.labels as |label|}}
-        <div class='badge badge-pill' style='background:{{node.color}}'>
-          {{label}}
-        </div>
-      {{/each}}
-    {{/ember-wormhole}}
-  {{/if}}
+
+{{!-- Wormhole --}}
+{{#if isHovering}}
+  {{#ember-wormhole to='destination'}}
+    <strong>
+      {{node.name}}
+    </strong>
+    {{#each node.labels as |label|}}
+      <div class='badge badge-pill' style='background:{{node.color}}'>
+        {{label}}
+      </div>
+    {{/each}}
+  {{/ember-wormhole}}
+{{/if}}
