--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -63,9 +63,13 @@ body {
   right: 5px;
 }
 
+.propertyDeleteButtons {
+  right: 0;
+}
+
 .card-info {
   min-width: 12rem;
-  max-width: 36rem;
+  max-width: 50rem;
 }
 
 .welcome-page {
